--- a/cybersecurity1/index.html
+++ b/cybersecurity1/index.html
@@ -1,85 +1,76 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>أكاديمية الأمن السيبراني</title>
   <link rel="stylesheet" href="styles.css">
   <style>
     body {
       margin: 0;
       font-family: 'Cairo', sans-serif;
-      direction: rtl;
-      background-color: #f7f9fc;
+      background-color: #f4f6f9;
     }
 
     header {
       background-color: #1a73e8;
       color: white;
-      text-align: center;
-      padding: 15px 0;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px 30px;
+    }
+
+    header h1 {
+      margin: 0;
       font-size: 24px;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin-left: 20px;
       font-weight: bold;
     }
 
     .hero {
       background: url('images/cyber-bg.jpg') center/cover no-repeat;
       color: white;
-      padding: 100px 20px;
+      padding: 120px 20px;
       text-align: center;
-      position: relative;
     }
 
-    .hero h1 {
+    .hero h2 {
       font-size: 48px;
       margin-bottom: 20px;
     }
 
     .hero p {
       font-size: 20px;
-      margin-bottom: 40px;
+      margin-bottom: 30px;
     }
 
     .hero a button {
       font-size: 18px;
-      padding: 15px 30px;
-      border-radius: 30px;
+      padding: 12px 30px;
+      border-radius: 25px;
       background-color: #fff;
       color: #1a73e8;
       border: none;
       font-weight: bold;
-      transition: 0.3s;
       cursor: pointer;
+      transition: 0.3s;
     }
 
     .hero a button:hover {
       background-color: #e6f0ff;
     }
 
-    .intro-section {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      flex-wrap: wrap;
-      padding: 60px 20px;
-      background-color: #ffffff;
-    }
-
-    .intro-section div {
-      flex: 1;
-      min-width: 300px;
-      padding: 20px;
-    }
-
-    .intro-section img {
-      max-width: 100%;
-      border-radius: 20px;
-    }
-
     .features {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      padding: 40px;
+      gap: 30px;
+      padding: 60px 20px;
       text-align: center;
     }
 
@@ -103,51 +94,56 @@
     footer {
       text-align: center;
       padding: 20px;
-      background-color: #f1f1f1;
-      color: #777;
-      font-size: 14px;
+      background-color: #1a73e8;
+      color: white;
+    }
+
+    @media (max-width: 600px) {
+      .hero h2 {
+        font-size: 32px;
+      }
+      .hero p {
+        font-size: 18px;
+      }
     }
   </style>
 </head>
 <body>
 
-  <header>🔐 أكاديمية الأمن السيبراني</header>
+  <header>
+    <h1>🔐 أكاديمية الأمن السيبراني</h1>
+    <nav>
+      <a href="index.html">الرئيسية</a>
+      <a href="courses.html">الدورات</a>
+      <a href="about.html">من نحن</a>
+      <a href="login.html">تسجيل الدخول</a>
+    </nav>
+  </header>
 
   <div class="hero">
-    <h1>مرحباً بكم في أكاديمية الأمن السيبراني</h1>
-    <p>ابدأ رحلتك معنا وتعلم حماية نفسك ومعلوماتك.</p>
-    <a href="courses.html"><button>ابدأ الآن</button></a>
+    <h2>أهلاً بك في عالم الحماية السيبرانية</h2>
+    <p>ابدأ رحلتك التعليمية وتعلم كيف تحمي نفسك ومعلوماتك من التهديدات الرقمية</p>
+    <a href="courses.html"><button>ابدأ التعلم</button></a>
   </div>
-
-  <section class="intro-section">
-    <div>
-      <h1>مرحبًا بك في أكاديمية الأمن السيبراني</h1>
-      <p>تعلم أساسيات الحماية الرقمية من خلال دروس تفاعلية واختبارات واقعية.</p>
-      <a href="login.html"><button>ابدأ الآن</button></a>
-      <br><br>
-      <a href="about.html">من نحن</a>
-    </div>
-    <div>
-      <img src="images/cyber-bg.jpg" alt="صورة الأمن السيبراني">
-    </div>
-  </section>
 
   <section class="features">
     <div class="feature-card">
-      <h3>📚 دروس تعليمية</h3>
-      <p>محتوى مبسّط ومباشر لفهم مفاهيم الحماية السيبرانية.</p>
+      <h3>📘 دروس تعليمية</h3>
+      <p>تعلم أساسيات الأمن السيبراني بطريقة مبسطة وسهلة.</p>
     </div>
     <div class="feature-card">
-      <h3>🧠 اختبارات قصيرة</h3>
-      <p>اختبر معلوماتك بعد كل درس وتابع تقدمك.</p>
+      <h3>🧠 اختبارات تفاعلية</h3>
+      <p>اختبر معرفتك بعد كل درس وتابع تقدمك لحظة بلحظة.</p>
     </div>
     <div class="feature-card">
-      <h3>🛡️ حماية نفسك</h3>
-      <p>تعلّم كيف تحمي بياناتك وتبقى آمنًا على الإنترنت.</p>
+      <h3>🔒 حماية البيانات</h3>
+      <p>تعرف على طرق حماية حساباتك وكلمات مرورك بذكاء.</p>
     </div>
   </section>
 
-  <footer>© 2025 أكاديمية الأمن السيبراني. جميع الحقوق محفوظة.</footer>
+  <footer>
+    © 2025 أكاديمية الأمن السيبراني. جميع الحقوق محفوظة.
+  </footer>
 
 </body>
 </html>
