--- a/about.html
+++ b/about.html
@@ -1,38 +1,97 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>حول الأكاديمية</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>من نحن - أكاديمية الأمن السيبراني</title>
   <link rel="stylesheet" href="styles.css">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Cairo', sans-serif;
+      background-color: #f4f6f9;
+      color: #333;
+    }
+    header {
+      background-color: #1a73e8;
+      color: white;
+      text-align: center;
+      padding: 15px;
+      font-size: 24px;
+      font-weight: bold;
+    }
+    .about-container {
+      max-width: 800px;
+      margin: 40px auto;
+      background: white;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+    }
+    .about-container h1 {
+      color: #1a73e8;
+      margin-bottom: 20px;
+      text-align: center;
+    }
+    .about-container p {
+      line-height: 1.7;
+      margin-bottom: 15px;
+      font-size: 18px;
+    }
+    .about-container ul {
+      list-style: disc inside;
+      margin-bottom: 20px;
+    }
+    .about-container ul li {
+      margin-bottom: 10px;
+    }
+    .about-container a.btn {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 12px 25px;
+      background-color: #1a73e8;
+      color: white;
+      text-decoration: none;
+      border-radius: 8px;
+      transition: 0.3s;
+    }
+    .about-container a.btn:hover {
+      background-color: #155ab6;
+    }
+    footer {
+      text-align: center;
+      padding: 15px;
+      background: #1a73e8;
+      color: white;
+      margin-top: 40px;
+    }
+  </style>
 </head>
 <body>
 
   <header>🔐 أكاديمية الأمن السيبراني</header>
 
-  <div class="container">
-    <h1>من نحن؟</h1>
+  <div class="about-container">
+    <h1>من نحن</h1>
     <p>
-      أكاديمية الأمن السيبراني هي منصة تعليمية تهدف إلى توعية المستخدمين بأساسيات الأمن الرقمي، ومساعدتهم على حماية أنفسهم وبياناتهم من التهديدات السيبرانية.
+      تأسست أكاديمية الأمن السيبراني بهدف تمكين الأفراد من فهم أساسيات الحماية الرقمية بطريقة مبسطة وتفاعلية.
+      نقدم محتوى تعليمي غني بالشرح النظري والتطبيق العملي، مصمم خصيصًا للمبتدئين والمحترفين على حد سواء.
     </p>
-
     <h2>رؤيتنا</h2>
     <p>
-      أن نصبح المرجع العربي الأول في تعليم الأمن السيبراني بأسلوب مبسط وتفاعلي.
+      أن نصبح المنصة العربية الرائدة في تعليم الأمن السيبراني، وأن نرفع مستوى الوعي الرقمي بين جميع فئات المستخدمين.
     </p>
-
-    <h2>ماذا نقدّم؟</h2>
+    <h2>مهمتنا</h2>
     <ul>
-      <li>📚 دروس تعليمية مبسطة</li>
-      <li>🧠 اختبارات قصيرة بعد كل درس</li>
-      <li>🎯 تحديات واقعية لتنمية المهارات</li>
-      <li>🎓 شهادة عند إتمام الدورة</li>
+      <li>توفير دروس مبسطة ومباشرة تغطي أهم مواضيع الحماية السيبرانية.</li>
+      <li>تقديم اختبارات تفاعلية تساعد على تقييم المعرفة وتنميتها.</li>
+      <li>تزويد المتعلمين بمهارات عملية تحضرهم لمواجهة التهديدات الرقمية.</li>
     </ul>
-
-    <br>
-    <a href="index.html"><button>⬅️ العودة إلى الصفحة الرئيسية</button></a>
+    <a href="index.html" class="btn">رجوع إلى الصفحة الرئيسية</a>
   </div>
 
   <footer>© 2025 أكاديمية الأمن السيبراني. جميع الحقوق محفوظة.</footer>
 
 </body>
 </html>
+
