--- a/courses.html
+++ b/courses.html
@@ -1,61 +1,91 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>الدروس التعليمية</title>
+  <title>الدورات – أكاديمية الأمن السيبراني</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
   <style>
+    body {
+      margin: 0;
+      font-family: 'Cairo', sans-serif;
+      background-color: #f4f6f9;
+      color: #333;
+    }
+    header {
+      background-color: #1a73e8;
+      color: white;
+      text-align: center;
+      padding: 15px;
+      font-size: 24px;
+      font-weight: bold;
+    }
     .courses-container {
       max-width: 1000px;
-      margin: 50px auto;
-      padding: 30px;
-      background-color: #fff;
-      border-radius: 15px;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
+      margin: 40px auto;
+      padding: 20px;
     }
-
     .courses-container h1 {
       text-align: center;
       color: #1a73e8;
-      margin-bottom: 40px;
+      margin-bottom: 30px;
+      font-size: 32px;
     }
-
+    .course-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 20px;
+    }
     .course-card {
-      background-color: #f9f9f9;
-      margin-bottom: 20px;
-      padding: 25px;
+      background: white;
       border-radius: 12px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
-      transition: 0.3s;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+      overflow: hidden;
+      transition: transform .2s;
     }
-
     .course-card:hover {
-      background-color: #eef6ff;
+      transform: translateY(-5px);
     }
-
-    .course-card h2 {
-      margin-bottom: 10px;
+    .course-card img {
+      width: 100%;
+      height: 160px;
+      object-fit: cover;
+    }
+    .course-card .content {
+      padding: 20px;
+    }
+    .course-card h3 {
+      margin: 0 0 10px;
       color: #1a73e8;
+      font-size: 20px;
     }
-
     .course-card p {
-      color: #444;
-      font-size: 17px;
+      margin: 0 0 15px;
+      font-size: 16px;
+      line-height: 1.5;
+      color: #555;
     }
-
     .course-card a {
       display: inline-block;
-      margin-top: 15px;
-      text-decoration: none;
-      color: #fff;
-      background-color: #1a73e8;
       padding: 10px 20px;
-      border-radius: 8px;
-      transition: 0.3s;
+      background-color: #1a73e8;
+      color: white;
+      text-decoration: none;
+      border-radius: 6px;
+      transition: background .3s;
     }
-
     .course-card a:hover {
       background-color: #155ab6;
+    }
+    footer {
+      text-align: center;
+      padding: 15px;
+      background-color: #1a73e8;
+      color: white;
+      margin-top: 40px;
+    }
+    @media (max-width: 600px) {
+      .courses-container h1 { font-size: 28px; }
     }
   </style>
 </head>
@@ -64,28 +94,39 @@
   <header>🔐 أكاديمية الأمن السيبراني</header>
 
   <div class="courses-container">
-    <h1>الدروس التعليمية</h1>
+    <h1>الدورات التعليمية</h1>
+    <div class="course-grid">
+      <div class="course-card">
+        <img src="images/lesson1-thumb.jpg" alt="ما هو الأمن السيبراني؟">
+        <div class="content">
+          <h3>الدرس الأول: ما هو الأمن السيبراني؟</h3>
+          <p>مقدمة شاملة حول مفهوم الأمن السيبراني وأهميته في حياتنا اليومية.</p>
+          <a href="lesson1.html">ابدأ الدرس</a>
+        </div>
+      </div>
 
-    <div class="course-card">
-      <h2>ما هو الأمن السيبراني؟</h2>
+      <div class="course-card">
+        <img src="images/lesson2-thumb.jpg" alt="أنواع الهجمات السيبرانية">
+        <div class="content">
+          <h3>الدرس الثاني: أنواع الهجمات السيبرانية</h3>
+          <p>تعرف على أشهر الهجمات مثل Phishing، Malware، DDoS وغيرها.</p>
+          <a href="lesson2.html">ابدأ الدرس</a>
+        </div>
+      </div>
 
-      <p>مقدمة شاملة حول مفهوم الأمن السيبراني، وأهميته في عالم اليوم.</p>
-      <a href="lesson1.html">ابدأ الدرس</a>
+      <div class="course-card">
+        <img src="images/lesson3-thumb.jpg" alt="حماية الحسابات وكلمات المرور">
+        <div class="content">
+          <h3>الدرس الثالث: حماية الحسابات وكلمات المرور</h3>
+          <p>نصائح عملية لإنشاء كلمات مرور قوية وتفعيل المصادقة الثنائية.</p>
+          <a href="lesson3.html">ابدأ الدرس</a>
+        </div>
+      </div>
     </div>
-
-    <div class="course-card">
-      <h2>أنواع التهديدات السيبرانية</h2>
-      <p>تعرف على أشهر أنواع الهجمات مثل التصيد الاحتيالي، الفيروسات، وهجمات DDOS.</p>
-        <li><a href="lesson2.html">الدرس الثاني: أنواع الهجمات السيبرانية</a></li>
-
-    </div>
-
-    <div class="course-card">
-      <h2>حماية حساباتك وكلمات المرور</h2>
-      <p>نصائح عملية لإنشاء كلمات مرور قوية وتفعيل المصادقة الثنائية.</p>
-      <li><a href="lesson3.html">الدرس الثالث: حماية حساباتك وكلمات المرور</a></li>
+  </div>
 
   <footer>© 2025 أكاديمية الأمن السيبراني. جميع الحقوق محفوظة.</footer>
 
 </body>
 </html>
+
