--- a/signup.html
+++ b/signup.html
@@ -1,69 +1,79 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>إنشاء حساب جديد</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>إنشاء حساب – أكاديمية الأمن السيبراني</title>
   <link rel="stylesheet" href="styles.css">
   <style>
+    body {
+      margin: 0;
+      font-family: 'Cairo', sans-serif;
+      background-color: #f4f6f9;
+      color: #333;
+    }
+    header {
+      background-color: #1a73e8;
+      color: white;
+      text-align: center;
+      padding: 15px;
+      font-size: 24px;
+      font-weight: bold;
+    }
     .signup-container {
-      max-width: 500px;
-      margin: 50px auto;
-      background-color: #ffffff;
-      padding: 40px;
-      border-radius: 20px;
+      max-width: 400px;
+      margin: 60px auto;
+      background: white;
+      padding: 30px;
+      border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.05);
     }
-
     .signup-container h1 {
-      color: #1a73e8;
       text-align: center;
-      margin-bottom: 30px;
+      color: #1a73e8;
+      margin-bottom: 25px;
+      font-size: 28px;
     }
-
     .signup-container label {
       display: block;
       margin-top: 15px;
       font-weight: bold;
     }
-
     .signup-container input {
       width: 100%;
-      padding: 12px;
+      padding: 10px;
       margin-top: 8px;
-      border-radius: 10px;
       border: 1px solid #ccc;
-    }
-
-    .signup-container button {
-      margin-top: 25px;
-      width: 100%;
-      padding: 14px;
-      border-radius: 10px;
-      background-color: #1a73e8;
-      color: white;
-      font-size: 18px;
-      border: none;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-
-    .signup-container button:hover {
-      background-color: #155ab6;
-    }
-
-    .signup-container .login-link {
-      text-align: center;
-      margin-top: 20px;
+      border-radius: 6px;
+      box-sizing: border-box;
       font-size: 16px;
     }
-
-    .signup-container .login-link a {
-      color: #1a73e8;
-      font-weight: bold;
-      text-decoration: none;
+    .signup-container .btn {
+      width: 100%;
+      padding: 12px;
+      margin-top: 20px;
+      background-color: #1a73e8;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      font-size: 18px;
+      cursor: pointer;
+      transition: background-color .3s;
     }
-
-    .signup-container .login-link a:hover {
+    .signup-container .btn:hover {
+      background-color: #155ab6;
+    }
+    .signup-container .links {
+      text-align: center;
+      margin-top: 15px;
+      font-size: 14px;
+    }
+    .signup-container .links a {
+      color: #1a73e8;
+      text-decoration: none;
+      margin: 0 5px;
+    }
+    .signup-container .links a:hover {
       text-decoration: underline;
     }
   </style>
@@ -74,26 +84,25 @@
 
   <div class="signup-container">
     <h1>إنشاء حساب جديد</h1>
+    <form action="welcome.html" method="POST">
+      <label for="username">اسم المستخدم</label>
+      <input type="text" id="username" name="username" placeholder="أدخل اسم المستخدم" required>
 
-   <form action="welcome.html" method="POST">
-  <label for="username">اسم المستخدم</label>
-  <input type="text" id="username" name="username" required>
+      <label for="email">البريد الإلكتروني</label>
+      <input type="email" id="email" name="email" placeholder="أدخل بريدك الإلكتروني" required>
 
-  <label for="email">البريد الإلكتروني</label>
-  <input type="email" id="email" name="email" required>
+      <label for="password">كلمة المرور</label>
+      <input type="password" id="password" name="password" placeholder="••••••••••" required>
 
-  <label for="password">كلمة المرور</label>
-  <input type="password" id="password" name="password" required>
+      <label for="confirm-password">تأكيد كلمة المرور</label>
+      <input type="password" id="confirm-password" name="confirm-password" placeholder="أعد إدخال كلمة المرور" required>
 
-  <button type="submit">تسجيل</button>
-</form>
-
-    <div class="login-link">
-      لديك حساب بالفعل؟ <a href="login.html">تسجيل الدخول</a>
+      <button type="submit" class="btn">تسجيل</button>
+    </form>
+    <div class="links">
+      لديك حساب؟ <a href="login.html">تسجيل الدخول</a> | <a href="index.html">الرئيسية</a>
     </div>
   </div>
-
-  <footer>© 2025 أكاديمية الأمن السيبراني. جميع الحقوق محفوظة.</footer>
 
 </body>
 </html>
